--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+          architecture: 'x86'
 
       - name: Install dev dependencies
         run: pip install -r dev-requirements.txt
