--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ '2.6', '2.7', '3.4', '3.5', '3.6', '3.7' ]
+        python-version: [ '3.4', '3.5', '3.6', '3.7' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: 'x86'
 
       - name: Install dev dependencies
         run: pip install -r dev-requirements.txt
